solve Kata8 and fix Kata8Test