@@ -10,6 +10,8 @@ import util.DataUtil;
 
 import java.util.List;
 import java.util.Map;
+import java.util.function.BiFunction;
+import java.util.stream.Collectors;
 
 /*
     Goal: Combine videos and bookmarks by index (StreamUtils.zip) (https://github.com/poetix/protonpack)
@@ -21,8 +23,12 @@ public class Kata8 {
         List<Movie> movies = DataUtil.getMovies();
         List<Bookmark> bookMarks = DataUtil.getBookMarks();
 
-        // StreamUtils.zip()
 
-        return ImmutableList.of(ImmutableMap.of("videoId", 5, "bookmarkId", 3));
+        BiFunction<Movie, Bookmark, Map<String, String>> movieBookmarkMapBiFunction = (movie, bookMark) -> {
+            return Map.of("videoId", movie.getId().toString(), "bookmarkId", bookMark.getId().toString());
+        };
+        return StreamUtils
+                 .zip(movies.stream(),bookMarks.stream(), movieBookmarkMapBiFunction).collect(Collectors.toList());
+
     }
 }
